--- a/css/style.css
+++ b/css/style.css
@@ -1584,11 +1584,11 @@ blockquote {
     -webkit-transition: 1s ease;
     transition: 1s ease; }
     .blog-sec .mdl-card .mdl-card__title .blog-img.blog-1 {
-      background: transparent url("../img/blog1.jpg") repeat scroll center center/cover; }
+      background: transparent url("../img/gold-medal.jpeg") repeat scroll center center/cover; }
     .blog-sec .mdl-card .mdl-card__title .blog-img.blog-2 {
-      background: transparent url("../img/blog2.jpg") repeat scroll center center/cover; }
+      background: transparent url("../img/smart-india.jpeg") repeat scroll center center/cover; }
     .blog-sec .mdl-card .mdl-card__title .blog-img.blog-3 {
-      background: transparent url("../img/blog3.jpg") repeat scroll center center/cover; }
+      background: transparent url("../img/enginx.jpg") repeat scroll center center/cover; }
     .blog-sec .mdl-card .mdl-card__title .blog-img.blog-4 {
       background: transparent url("../img/blog4.jpg") repeat scroll center center/cover; }
     .blog-sec .mdl-card .mdl-card__title .blog-img.blog-5 {
