--- a/css/change.css
+++ b/css/change.css
@@ -7,11 +7,7 @@
         height: 100%;
     }
 }
-@media (min-width: 768px) {
-    /* #blog_sec .row{
-        display: flex;
-    }
-    #blog_sec .col-sm-4{
-        display: flex;
-    } */
+#portfolio h4{
+    color: black;
+    font-weight: 700;
 }
