--- a/css/style.css
+++ b/css/style.css
@@ -1402,8 +1402,8 @@ blockquote {
 /*Portfolio Sec*/
 .portfolio-sec .bottom-links {
   display: block;
-  padding: 11px 30px;
-  text-align: right;
+  padding: 11px 15px;
+  /* text-align: right; */
   font-size: 22px; }
   .portfolio-sec .bottom-links a:first-child {
     padding-right: 30px; }
@@ -1432,9 +1432,10 @@ blockquote {
     text-transform: capitalize;
     font-size: 18px;
     font-weight: 500;
-    color: #fff;
+    /* color: #fff; */
+    color: black;
     display: inline-block;
-    left: 20px;
+    left: 15px;
     bottom: 20px;
     z-index: 2; }
 .portfolio-sec .item:hover .light-img-wrap img {
