--- a/css/change.css
+++ b/css/change.css
@@ -16,3 +16,12 @@
 #portfolio .img-cap{
     font-size: 13px;
 }
+
+/* .mdl-layout__header .title-img{
+    width: 38px;
+    height: 44px;
+}
+
+.mdl-layout__header .mdl-layout-title{
+    text-transform: lowercase;
+} */
